erDiagram
    cars {
        uuid id PK "Primary key (auto-generated)"
        text month "Month in YYYY-MM format"
        text make "Vehicle manufacturer"
        text importer_type "Registration type"
        text fuel_type "Petrol, Diesel, Electric, Hybrid"
        text vehicle_type "Cars, Motor cycles, Buses, etc"
        integer number "Number of registrations"
    }

    coe {
        uuid id PK "Primary key (auto-generated)"
        text month "Bidding month YYYY-MM"
        integer bidding_no "Bidding exercise number (1 or 2)"
        text vehicle_class "COE category"
        integer quota "Available certificates"
        integer bids_success "Successful bids"
        integer bids_received "Total bids submitted"
        integer premium "Winning premium in SGD"
    }

    pqp {
        uuid id PK "Primary key (auto-generated)"
        text month "Month YYYY-MM"
        text vehicle_class "COE category"
        integer pqp "Prevailing Quota Premium rate"
    }

    posts {
        uuid id PK "Primary key (auto-generated)"
        text title "Blog post title"
        text slug UK "URL-friendly identifier"
        text content "Markdown content"
        text excerpt "2-3 sentence summary"
        text hero_image "Unsplash URL for header"
        text[] tags "Category tags array"
        jsonb highlights "Key statistics for display"
        text status "Publication status (draft/published)"
        jsonb metadata "Additional metadata"
        text month "Source data month YYYY-MM"
        text data_type "Source type (cars/coe)"
        timestamp created_at "Creation timestamp"
        timestamp modified_at "Last modification timestamp"
        timestamp published_at "Publication date"
    }

    deregistrations {
        uuid id PK "Primary key (auto-generated)"
        text month "Month in YYYY-MM format"
        text category "VQS category"
        integer number "Number of deregistrations"
    }

    %% Relationships (conceptual, not foreign keys)
    posts ||--o{ cars : "generated from cars data"
    posts ||--o{ coe : "generated from coe data"
    coe ||--o{ pqp : "related by month and vehicle_class"